[21] Promote pattern switch and record patterns as standard features (#1316)
The features in JavaFeature should have the preview flag as false. All corresponding tests should be upgraded to the right compliance level and have preview as disabled.