@@ -55,7 +55,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		defaultOptions.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_21);
 		defaultOptions.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_21);
 		defaultOptions.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_21);
-		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.ENABLED);
+		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
 		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
 		defaultOptions.put(CompilerOptions.OPTION_Store_Annotations, CompilerOptions.ENABLED);
 		return defaultOptions;
@@ -79,7 +79,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runner.expectedErrorString = expectedErrorOutput;
 		runner.vmArguments = new String[] {"--enable-preview"};
 		runner.customOptions = customOptions;
-		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview(SwitchPatternTest.previewLevel);
 		runner.runConformTest();
 	}
 	@Override
@@ -91,9 +90,8 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
 		runner.expectedJavacOutputString = expectedCompilerLog;
-		runner.vmArguments = new String[] {"--enable-preview"};
+		runner.vmArguments = null;
 		runner.customOptions = getCompilerOptions();
-		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview(SwitchPatternTest.previewLevel);
 		runner.runNegativeTest();
 		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.forReleaseWithPreview(SwitchPatternTest.previewLevel));
 	}
@@ -110,9 +108,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
 		runner.customOptions = customOptions;
-		runner.vmArguments = new String[] {"--enable-preview"};
-		runner.javacTestOptions = javacAdditionalTestOptions == null ? JavacTestOptions.forReleaseWithPreview(SwitchPatternTest.previewLevel) :
-			JavacTestOptions.forReleaseWithPreview(SwitchPatternTest.previewLevel, javacAdditionalTestOptions);
+		runner.vmArguments = new String[] {""};
 		runner.runWarningTest();
 	}
 
@@ -2219,7 +2215,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 	}
 	public void testBug574564_010() {
 		Map<String, String> options = getCompilerOptions();
-		options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
+		options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_20);
 		runNegativeTest(
 			new String[] {
 				"X.java",
@@ -2241,59 +2237,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 			"	case String s, default, Integer i  -> System.out.println(0);\n" +
 			"	                                ^\n" +
 			"Syntax error on token \"i\", delete this token\n" +
-			"----------\n",
-			null,
-			true,
-			options);
-	}
-	public void testBug574564_011() {
-		Map<String, String> options = getCompilerOptions();
-		options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
-		runNegativeTest(
-			new String[] {
-				"X.java",
-				"public class X {\n"+
-				" private static void foo(Integer o) {\n"+
-				"   switch (o) {\n"+
-				"     case null  -> System.out.println(0);\n"+
-				"   }\n"+
-				" }\n"+
-				"}",
-			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 4)\n" +
-			"	case null  -> System.out.println(0);\n" +
-			"	     ^^^^\n" +
-			"Pattern Matching in Switch is a preview feature and disabled by default. Use --enable-preview to enable\n" +
-			"----------\n",
-			null,
-			true,
-			options);
-	}
-	public void testBug574564_012() {
-		Map<String, String> options = getCompilerOptions();
-		options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
-		runNegativeTest(
-			new String[] {
-				"X.java",
-				"public class X {\n"+
-				" private static void foo(Integer o) {\n"+
-				"   switch (o) {\n"+
-				"     case 1, default, null  -> System.out.println(0);\n"+
-				"   }\n"+
-				" }\n"+
-				"}",
-			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 4)\n" +
-			"	case 1, default, null  -> System.out.println(0);\n" +
-			"	        ^^^^^^^\n" +
-			"Pattern Matching in Switch is a preview feature and disabled by default. Use --enable-preview to enable\n" +
-			"----------\n" +
-			"2. ERROR in X.java (at line 4)\n" +
-			"	case 1, default, null  -> System.out.println(0);\n" +
-			"	                 ^^^^\n" +
-			"Pattern Matching in Switch is a preview feature and disabled by default. Use --enable-preview to enable\n" +
 			"----------\n",
 			null,
 			true,
@@ -4144,86 +4087,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"This case label is dominated by one of the preceding case labels\n" +
 				"----------\n");
 	}
-	public void testBug575737_001() {
-		Map<String, String> options =getCompilerOptions();
-		options.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.WARNING);
-
-		this.runNegativeTest(
-			new String[] {
-				"X.java",
-				"public class X {\n"+
-				" static void foo1(String o) {\n"+
-				"   switch (o) {\n"+
-				"   case null -> System.out.println(\"null\");\n"+
-				"   case String s -> String.format(\"String %s\", s);\n"+
-				"   }\n"+
-				" }\n"+
-				" public static void main(String[] args) {\n"+
-				"   Zork();\n"+
-				" }\n"+
-				"}",
-			},
-			"----------\n" +
-			"1. WARNING in X.java (at line 4)\n" +
-			"	case null -> System.out.println(\"null\");\n" +
-			"	     ^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 5)\n" +
-			"	case String s -> String.format(\"String %s\", s);\n" +
-			"	     ^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"3. ERROR in X.java (at line 9)\n" +
-			"	Zork();\n" +
-			"	^^^^\n" +
-			"The method Zork() is undefined for the type X\n" +
-			"----------\n",
-			null,
-			true,
-			options
-		);
-	}
-	public void testBug575737_002() {
-		Map<String, String> options =getCompilerOptions();
-		options.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.INFO);
-
-		this.runNegativeTest(
-			new String[] {
-				"X.java",
-				"public class X {\n"+
-				" static void foo1(String o) {\n"+
-				"   switch (o) {\n"+
-				"   case null -> System.out.println(\"null\");\n"+
-				"   case String s -> String.format(\"String %s\", s);\n"+
-				"   }\n"+
-				" }\n"+
-				" public static void main(String[] args) {\n"+
-				"   Zork();\n"+
-				" }\n"+
-				"}",
-			},
-			"----------\n" +
-			"1. INFO in X.java (at line 4)\n" +
-			"	case null -> System.out.println(\"null\");\n" +
-			"	     ^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"2. INFO in X.java (at line 5)\n" +
-			"	case String s -> String.format(\"String %s\", s);\n" +
-			"	     ^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"3. ERROR in X.java (at line 9)\n" +
-			"	Zork();\n" +
-			"	^^^^\n" +
-			"The method Zork() is undefined for the type X\n" +
-			"----------\n",
-			null,
-			true,
-			options
-		);
-	}
 	public void testBug575738_001() {
 		runNegativeTest(
 				new String[] {
@@ -4342,7 +4205,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"final class F<T> implements J<T> {}\n"+
 				"\n"+
 				"public class X {\n"+
-				"@SuppressWarnings(\"preview\")\n" +
 				" static int testExhaustive2(J<Integer> ji) {\n"+
 				"   return switch (ji) { // Exhaustive!\n"+
 				"   case E<Integer> e -> 42;\n"+
@@ -4356,12 +4218,12 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}"
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 10)\n" +
+				"1. ERROR in X.java (at line 9)\n" +
 				"	return switch (ji) { // Exhaustive!\n" +
 				"	               ^^\n" +
 				"A switch expression should have a default case\n" +
 				"----------\n" +
-				"2. ERROR in X.java (at line 17)\n" +
+				"2. ERROR in X.java (at line 16)\n" +
 				"	Zork();\n" +
 				"	^^^^\n" +
 				"The method Zork() is undefined for the type X\n" +
@@ -4395,7 +4257,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"sealed class C permits D {}\n"+
 				"final class D extends C {}\n"+
 				"public class X {\n"+
-				"       @SuppressWarnings(\"preview\")\n"+
 				"       static  void foo(C ji) {\n"+
 				"                switch (ji) { // non-exhaustive\n"+
 				"                  case D d : System.out.println(\"D\"); break;\n"+
@@ -4408,12 +4269,12 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 6)\n" +
+			"1. ERROR in X.java (at line 5)\n" +
 			"	switch (ji) { // non-exhaustive\n" +
 			"	        ^^\n" +
 			"An enhanced switch statement should be exhaustive; a default label expected\n" +
 			"----------\n" +
-			"2. ERROR in X.java (at line 12)\n" +
+			"2. ERROR in X.java (at line 11)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -4426,7 +4287,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"abstract sealed class C permits D {}\n"+
 				"final class D extends C {}\n"+
 				"public class X {\n"+
-				"       @SuppressWarnings(\"preview\")\n"+
 				"       static  void foo(C ji) {\n"+
 				"                switch (ji) { // non-exhaustive\n"+
 				"                  case D d : System.out.println(\"D\"); break;\n"+
@@ -4439,7 +4299,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 12)\n" +
+			"1. ERROR in X.java (at line 11)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -4452,7 +4312,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"sealed interface C permits D {}\n"+
 				"final class D implements C {}\n"+
 				"public class X {\n"+
-				"       @SuppressWarnings(\"preview\")\n"+
 				"       static  void foo(C ji) {\n"+
 				"                switch (ji) { // non-exhaustive\n"+
 				"                  case D d : System.out.println(\"D\"); break;\n"+
@@ -4465,7 +4324,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 12)\n" +
+			"1. ERROR in X.java (at line 11)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -4478,7 +4337,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"sealed abstract class C permits D {}\n"+
 				"final class D extends C {}\n"+
 				"public class X {\n"+
-				" @SuppressWarnings(\"preview\")\n"+
 				" static <T extends C> void foo(T  ji) {\n"+
 				"    switch (ji) { // exhaustive because C is sealed and abstract\n"+
 				"      case D d : System.out.println(\"D\"); break;\n"+
@@ -4491,7 +4349,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 12)\n" +
+			"1. ERROR in X.java (at line 11)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -4504,7 +4362,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"sealed interface C permits D {}\n"+
 				"final class D implements C {}\n"+
 				"public class X {\n"+
-				" @SuppressWarnings(\"preview\")\n"+
 				" static <T extends C> void foo(T  ji) {\n"+
 				"    switch (ji) { // exhaustive because C is sealed and abstract\n"+
 				"      case D d : System.out.println(\"D\"); break;\n"+
@@ -4517,7 +4374,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"}",
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 12)\n" +
+			"1. ERROR in X.java (at line 11)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -4528,7 +4385,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 			new String[] {
 				"X.java",
 				"public class X {\n"+
-				" @SuppressWarnings(\"preview\")\n"+
 				" static  int foo(Object o) {\n"+
 				"   return switch (o) { \n"+
 				"      case X x when true -> 0;\n"+
@@ -4549,7 +4405,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 			new String[] {
 				"X.java",
 				"public class X {\n"+
-				" @SuppressWarnings(\"preview\")\n"+
 				" public static void main(String[] args) {\n"+
 				"     Boolean input = false;\n"+
 				"     int result = switch(input) {\n"+
@@ -4679,7 +4534,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 	private String getTestCaseForBug578504 (String caseConstant) {
 		return "public class X {\n"
 				+ "    public Object literal = \"a\";\n"
-				+ "    @SuppressWarnings(\"preview\")\n"
 				+ "	public boolean foo() {\n"
 				+ "        String s = switch(literal) {\n"
 				+ "            " + caseConstant
@@ -4769,7 +4623,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {\n"
 					+ "		return switch (n) {\n"
 					+ "	     case (Long l) when l.toString().equals(\"0\") -> {\n"
@@ -4790,7 +4643,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "		@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "		return switch (n) { \n"
 					+ "	     case (Long l) when l.toString().equals(\"0\") -> {\n"
@@ -4816,7 +4668,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "		return switch (n) { \n"
 					+ "	     case (Long l) when l.toString().equals(\"0\") -> {\n"
@@ -4833,7 +4684,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 7)\n" +
+				"1. ERROR in X.java (at line 6)\n" +
 				"	case Long l1 when l.toString().equals(l1.toString()) -> {\n" +
 				"	                  ^\n" +
 				"Local variable l referenced from a guard must be final or effectively final\n" +
@@ -4844,7 +4695,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "	int i = 0;\n"
 					+ "	return switch(n) {\n"
@@ -4860,7 +4710,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 9)\n" +
+				"1. ERROR in X.java (at line 8)\n" +
 				"	yield (i++);\n" +
 				"	       ^\n" +
 				"Local variable i referenced from a guard must be final or effectively final\n" +
@@ -4871,7 +4721,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "	int i = 0;\n"
 					+ "	return switch(n) {\n"
@@ -4887,7 +4736,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 9)\n" +
+				"1. ERROR in X.java (at line 8)\n" +
 				"	yield ++i;\n" +
 				"	        ^\n" +
 				"Local variable i referenced from a guard must be final or effectively final\n" +
@@ -4898,7 +4747,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "	int i = 0;\n"
 					+ "	return switch(n) {\n"
@@ -4914,7 +4762,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 9)\n" +
+				"1. ERROR in X.java (at line 8)\n" +
 				"	yield (i=i+1);\n" +
 				"	       ^\n" +
 				"Local variable i referenced from a guard must be final or effectively final\n" +
@@ -4928,7 +4776,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"X.java",
 					"public class X {\n"
 					+ " static int bar() { return 1; }\n"
-					+ "	@SuppressWarnings(\"preview\")\n"
 					+ "	static Long foo(Number n) {  \n"
 					+ "	int i = 0;\n"
 					+ "	return switch(n) {\n"
@@ -4944,7 +4791,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 10)\n" +
+				"1. ERROR in X.java (at line 9)\n" +
 				"	yield (i = bar());\n" +
 				"	       ^\n" +
 				"Local variable i referenced from a guard must be final or effectively final\n" +
@@ -4955,7 +4802,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 						"X.java",
 						"public class X {\n"
-								+ "    @SuppressWarnings(\"preview\")\n"
 								+ "	public static int foo(Number arg0) {\n"
 								+ "        int result = 0;\n"
 								+ "        result = \n"
@@ -4982,7 +4828,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 						"X.java",
 						"public class X {\n"
-								+ " @SuppressWarnings(\"preview\")\n"
 								+ "	public static int foo(Number arg0) {\n"
 								+ "        return switch (arg0) {\n"
 								+ "            case Object p : {\n"
@@ -5006,7 +4851,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 						"X.java",
 						"public class X {\n"
-								+ " @SuppressWarnings(\"preview\")\n"
 								+ "	public static int foo(Object arg0) {\n"
 								+ "        return switch (arg0) {\n"
 								+ "            case Object p : {\n"
@@ -5023,7 +4867,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 								+ "}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 12)\n" +
+				"1. ERROR in X.java (at line 11)\n" +
 				"	}\n" +
 				"	^^\n" +
 				"A switch labeled block in a switch expression should not complete normally\n" +
@@ -5163,7 +5007,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runConformTest(new String[] {
 				"X.java",
 				"public class X {\n"
-				+ "   @SuppressWarnings({ \"preview\", \"rawtypes\" })\n"
 				+ "	public static boolean foo(Integer n) {\n"
 				+ "    	return switch (n) {\n"
 				+ "	    	case Integer x when x.equals(10) -> {\n"
@@ -5186,7 +5029,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(new String[] {
 				"X.java",
 				"public class X {\n"
-				+ " @SuppressWarnings({ \"preview\", \"rawtypes\" })\n"
+				+ "   @SuppressWarnings({ \"rawtypes\" })\n"
 				+ "	public static boolean foo(Integer n) {\n"
 				+ "    	return switch (n) {\n"
 				+ "	    	case Integer x when x.equals(10) -> {\n"
@@ -5216,7 +5059,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(new String[] {
 				"X.java",
 				"public class X {\n"
-				+ " @SuppressWarnings({ \"preview\", \"rawtypes\" })\n"
+				+ "   @SuppressWarnings({ \"rawtypes\" })\n"
 				+ "	public static boolean foo(Integer n) {\n"
 				+ "    	return switch (n) {\n"
 				+ "	    	case Integer x when x.equals(10) -> {\n"
@@ -5246,7 +5089,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runConformTest(new String[] {
 				"X.java",
 				"public class X {\n"
-				+ "   @SuppressWarnings({ \"preview\", \"rawtypes\" })\n"
 				+ "    static final String CONSTANT = \"abc\";\n"
 				+ "    static String CON2 = \"abc\";\n"
 				+ "    public static int foo() {\n"
@@ -5274,7 +5116,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"+
-					" @SuppressWarnings(\"preview\")\n"+
 					" static  int foo(Object o, boolean b) {\n"+
 					"   return switch (o) { \n"+
 					"      case X x when b -> 0; // compilation error\n"+
@@ -5295,7 +5136,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"+
-					" @SuppressWarnings(\"preview\")\n"+
 					"     public static void foo1(Object o) {\n"
 					+ "    	boolean b = switch (o) {\n"
 					+ "    		case String s -> {\n"
@@ -5527,7 +5367,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"public class X {\n"+
-					" @SuppressWarnings(\"preview\")\n"+
 					"     public static void foo1(Object o) {\n"
 					+ "    	boolean b = switch (o) {\n"
 					+ "    		case String s, null -> {\n"
@@ -5544,7 +5383,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}"
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 5)\n" +
+				"1. ERROR in X.java (at line 4)\n" +
 				"	case String s, null -> {\n" +
 				"	               ^^^^\n" +
 				"A null case label has to be either the only expression in a case label or the first expression followed only by a default\n" +
@@ -5798,8 +5637,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runConformTest(
 				new String[] {
 					"X.java",
-					"@SuppressWarnings(\"preview\")\n"
-					+ "public class X {\n"
+					"public class X {\n"
 					+ "	public static void main(String argv[]) {\n"
 					+ "		(new X()).foo(\"abc\");\n"
 					+ "	}\n"
@@ -5826,9 +5664,8 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(
 				new String[] {
 					"X.java",
-					"import java.util.*;\n" +
-					"public class X {\n" +
-					"@SuppressWarnings(\"preview\")\n"
+					"import java.util.*;\n"
+					+ "public class X {\n"
 					+ "public static void foo(List<Number> l) {\n"
 					+ "	switch (l) {\n"
 					+ "	    case ArrayList<Number> al -> \n"
@@ -5842,7 +5679,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
+				"1. ERROR in X.java (at line 7)\n" +
 				"	case ArrayList<? extends Number> aln -> // Error - dominated case label\n" +
 				"	     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -5852,9 +5689,8 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(
 				new String[] {
 					"X.java",
-					"import java.util.*;\n" +
-					"public class X {\n" +
-					"@SuppressWarnings(\"preview\")\n"
+					"import java.util.*;\n"
+					+ "public class X {\n"
 					+ "public static void foo(List<Number> l) {\n"
 					+ "	switch (l) {\n"
 					+ "	    case ArrayList<? extends Number> aln ->\n"
@@ -5868,7 +5704,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
+				"1. ERROR in X.java (at line 7)\n" +
 				"	case ArrayList<Number> al ->  // Error - dominated case label\n" +
 				"	     ^^^^^^^^^^^^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -5879,8 +5715,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				new String[] {
 					"X.java",
 					"import java.util.*;\n" +
-					"public class X {\n" +
-					"@SuppressWarnings(\"preview\")\n"
+					"public class X {\n"
 					+ "public static void foo(Integer n) {\n"
 					+ "  switch (n) {\n"
 					+ "    case Integer i when true -> // Allowed but why write this?\n"
@@ -5892,12 +5727,12 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
+				"1. ERROR in X.java (at line 7)\n" +
 				"	case Integer i ->                     // Error - dominated case label\n" +
 				"	     ^^^^^^^^^\n" +
 				"The switch statement cannot have more than one unconditional pattern\n" +
 				"----------\n" +
-				"2. ERROR in X.java (at line 8)\n" +
+				"2. ERROR in X.java (at line 7)\n" +
 				"	case Integer i ->                     // Error - dominated case label\n" +
 				"	     ^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -5907,9 +5742,8 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(
 				new String[] {
 					"X.java",
-					"import java.util.*;\n" +
-					"public class X {\n" +
-					"@SuppressWarnings(\"preview\")\n"
+					"import java.util.*;\n"
+					+ "public class X {\n"
 					+ "public static void foo(Integer n) {\n"
 					+ "  switch (n) {\n"
 					+ "    case Integer i -> // Allowed but why write this?\n"
@@ -5921,12 +5755,12 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
+				"1. ERROR in X.java (at line 7)\n" +
 				"	case Integer i when true ->                     // Error - dominated case label\n" +
 				"	     ^^^^^^^^^^^^^^^^^^^\n" +
 				"The switch statement cannot have more than one unconditional pattern\n" +
 				"----------\n" +
-				"2. ERROR in X.java (at line 8)\n" +
+				"2. ERROR in X.java (at line 7)\n" +
 				"	case Integer i when true ->                     // Error - dominated case label\n" +
 				"	     ^^^^^^^^^^^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -5942,7 +5776,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"               Object o = \"Hello World\";\n"+
 					"               foo(o);\n"+
 					"       }\n"+
-					"       @SuppressWarnings(\"preview\")\n"+
 					"       public static void foo(Object o) {\n"+
 					"         switch (o) {\n"+
 					"           case String s:\n"+
@@ -5972,7 +5805,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"   Object o = new R();\n"+
 					"   foo(o);\n"+
 					" }\n"+
-					" @SuppressWarnings(\"preview\")\n"+
 					" public static void foo(Object o) {\n"+
 					"   switch (o) {\n"+
 					"     case R():\n"+
@@ -6000,7 +5832,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"   Object o = null;\n"+
 					"   foo(o);\n"+
 					" }\n"+
-					" @SuppressWarnings(\"preview\")\n"+
 					" public static void foo(Object o) {\n"+
 					"   switch (o) {\n"+
 					"     case null:\n"+
@@ -6023,7 +5854,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"X.java",
 					"public class X {\n" +
 					" \n" +
-					" @SuppressWarnings(\"preview\")\n" +
 					" public static void foo(Object o) {\n" +
 					"   switch (o) {\n" +
 					"     case Integer i :\n" +
@@ -6037,7 +5867,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"record R() {}"
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 6)\n" +
+				"1. ERROR in X.java (at line 5)\n" +
 				"	case Integer i :\n" +
 				"	^^^^^^^^^^^^^^\n" +
 				"Illegal fall-through from a case label pattern\n" +
@@ -6049,7 +5879,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"X.java",
 					" public class X {\n" +
 					" \n" +
-					" @SuppressWarnings(\"preview\")\n" +
 					" public static void foo(Object o) {\n" +
 					"   switch (o) {\n" +
 					"   case Float f: System.out.println(\"integer\"); break;\n" +
@@ -6060,7 +5889,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}"
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
+				"1. ERROR in X.java (at line 7)\n" +
 				"	case Integer i: System.out.println(\"integer\"); break;\n" +
 				"	     ^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -6072,7 +5901,6 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"X.java",
 					" public class X {\n" +
 					" \n" +
-					" @SuppressWarnings(\"preview\")\n" +
 					" public static void foo(Object o) {\n" +
 					"   switch (o) {\n" +
 					"   default: System.out.println(\"default\"); break;\n" +
@@ -6082,7 +5910,7 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"}"
 				},
 				"----------\n" +
-				"1. ERROR in X.java (at line 7)\n" +
+				"1. ERROR in X.java (at line 6)\n" +
 				"	case Integer i: System.out.println(\"integer\"); break;\n" +
 				"	     ^^^^^^^^^\n" +
 				"This case label is dominated by one of the preceding case labels\n" +
@@ -6094,9 +5922,30 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 					"X.java",
 					" public class X {\n" +
 					" \n" +
-					" @SuppressWarnings(\"preview\")\n" +
 					" public static void foo(Object o) {\n" +
 					"   switch (o) {\n" +
+					"   default: System.out.println(\"default\"); break;\n" +
+					"   case null: System.out.println(\"null\"); break;\n" +
+					"   }      \n" +
+					" }\n" +
+					"}"
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 6)\n" +
+				"	case null: System.out.println(\"null\"); break;\n" +
+				"	     ^^^^\n" +
+				"This case label is dominated by one of the preceding case labels\n" +
+				"----------\n");
+	}
+	public void testIssueDefaultDominance_004() {
+		runNegativeTest(
+				new String[] {
+					"X.java",
+					" public class X {\n" +
+					" \n" +
+					" public static void foo(Object o) {\n" +
+					"   switch (o) {\n" +
+					"   case Float f: System.out.println(\"integer\"); break;\n" +
 					"   default: System.out.println(\"default\"); break;\n" +
 					"   case null: System.out.println(\"null\"); break;\n" +
 					"   }      \n" +
@@ -6110,35 +5959,11 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				"This case label is dominated by one of the preceding case labels\n" +
 				"----------\n");
 	}
-	public void testIssueDefaultDominance_004() {
-		runNegativeTest(
-				new String[] {
-					"X.java",
-					" public class X {\n" +
-					" \n" +
-					" @SuppressWarnings(\"preview\")\n" +
-					" public static void foo(Object o) {\n" +
-					"   switch (o) {\n" +
-					"   case Float f: System.out.println(\"integer\"); break;\n" +
-					"   default: System.out.println(\"default\"); break;\n" +
-					"   case null: System.out.println(\"null\"); break;\n" +
-					"   }      \n" +
-					" }\n" +
-					"}"
-				},
-				"----------\n" +
-				"1. ERROR in X.java (at line 8)\n" +
-				"	case null: System.out.println(\"null\"); break;\n" +
-				"	     ^^^^\n" +
-				"This case label is dominated by one of the preceding case labels\n" +
-				"----------\n");
-	}
 	public void testIssue919() {
 		runNegativeTest(
 			new String[] {
 				"X.java",
 				" public class X {\n"
-				+ " @SuppressWarnings(\"preview\")\n"
 				+ "   static void defaultCanAppearBeforePattern(Integer i) {\n"
 				+ "	  switch (i) {\n"
 				+ "	  case null -> System.out.println(\"value unavailable: \" + i);\n"
@@ -6166,22 +5991,22 @@ public class SwitchPatternTest extends AbstractRegressionTest9 {
 				+ "}"
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 8)\n" +
+			"1. ERROR in X.java (at line 7)\n" +
 			"	case Integer value when value > 0 -> System.out.println(\"positive integer: \" + i);\n" +
 			"	     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
 			"This case label is dominated by one of the preceding case labels\n" +
 			"----------\n" +
-			"2. ERROR in X.java (at line 15)\n" +
+			"2. ERROR in X.java (at line 14)\n" +
 			"	case null -> System.out.println(\"value unavailable: \" + i);\n" +
 			"	     ^^^^\n" +
 			"This case label is dominated by one of the preceding case labels\n" +
 			"----------\n" +
-			"3. ERROR in X.java (at line 16)\n" +
+			"3. ERROR in X.java (at line 15)\n" +
 			"	case Integer value when value > 0 -> System.out.println(\"positive integer: \" + i);\n" +
 			"	     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
 			"This case label is dominated by one of the preceding case labels\n" +
 			"----------\n" +
-			"4. ERROR in X.java (at line 24)\n" +
+			"4. ERROR in X.java (at line 23)\n" +
 			"	case Integer value when value > 0 -> System.out.println(\"positive integer: \" + i);\n" +
 			"	     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
 			"This case label is dominated by one of the preceding case labels\n" +
